--- a/bottomnavigationlesson/build.gradle
+++ b/bottomnavigationlesson/build.gradle
@@ -37,7 +37,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
     packagingOptions {
         resources {
@@ -50,9 +50,9 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
     implementation 'androidx.compose.material:material:1.4.1'
-    implementation 'andoidx.navigation:navigation-compose:2.6.0-alpha04'
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha09"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
