--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ rootProject.name = "JetpackComposeProjects"
 include ':app'
 include ':rouletteapp'
 include ':bottomnavigationlesson'
+include ':topappbar'
