--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-buildscript {
+ buildscript {
     ext {
         compose_ui_version = '1.2.0'
     }
@@ -7,4 +7,5 @@ plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.46.1' apply false
 }
