--- a/infoapp/build.gradle
+++ b/infoapp/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -47,6 +49,12 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.dagger:hilt-android:2.46.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt 'com.google.dagger:hilt-compiler:2.46.1'
+
+    implementation 'androidx.room:room-ktx:2.5.2'
+    kapt 'androidx.room:room-compiler:2.5.2'
 
     def nav_version = "2.5.3"
     implementation("androidx.navigation:navigation-compose:$nav_version")
