--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':bottomnavigationlesson'
 include ':topappbar'
 include ':infoapp'
 include ':navigationcompose'
+include ':singlelinechart'
