--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':infoapp'
 include ':navigationcompose'
 include ':singlelinechart'
 include ':constraintlayoutlesson'
+include ':drawapp'
