--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':navigationcompose'
 include ':singlelinechart'
 include ':constraintlayoutlesson'
 include ':drawapp'
+include ':qrcodescan'
